# todo

./: pyproject.toml
_project/_project/: settings.py  urls.py
_project/app/: views.py
_project/app/static/app/: style.css
_project/app/templates/app/: index.html
